--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'foundation.privacybydesign.common:irma_server_common:0.4.0'
 
     compile 'org.glassfish.jersey.core:jersey-server:2.28'
+    compile 'org.glassfish.jersey.inject:jersey-hk2:2.28'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.28'
     compile 'ch.qos.logback:logback-classic:1.2.3'
     compile 'io.jsonwebtoken:jjwt:0.9.1'
