--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,16 @@ repositories {
 }
 
 dependencies {
-    compile 'org.irmacard.api:irma_api_common:1.2.2'
-    compile 'foundation.privacybydesign.common:irma_server_common:0.4.0'
+    implementation('org.irmacard.api:irma_api_common') {
+        version {
+            branch = 'master'
+        }
+    }
+    implementation('foundation.privacybydesign.common:irma_server_common') {
+        version {
+            branch = 'master'
+        }
+    }
 
     compile 'org.glassfish.jersey.core:jersey-server:2.28'
     compile 'org.glassfish.jersey.inject:jersey-hk2:2.28'
