--- a/build.gradle
+++ b/build.gradle
@@ -23,22 +23,14 @@ buildscript {
 repositories {
     mavenLocal()
     maven {
-        url "https://credentials.github.io/repos/maven2/"
+        url "https://raw.githubusercontent.com/credentials/credentials.github.io/master/repos/maven2/"
     }
     mavenCentral()
 }
 
 dependencies {
-    implementation('org.irmacard.api:irma_api_common') {
-        version {
-            branch = 'master'
-        }
-    }
-    implementation('foundation.privacybydesign.common:irma_server_common') {
-        version {
-            branch = 'master'
-        }
-    }
+    compile 'org.irmacard.api:irma_api_common:1.2.2'
+    compile 'foundation.privacybydesign.common:irma_server_common:0.4.0'
 
     compile 'org.glassfish.jersey.core:jersey-server:2.28'
     compile 'org.glassfish.jersey.inject:jersey-hk2:2.28'
