--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 version: '3'
 services:
+  mail:
+    image: 'mailhog/mailhog:latest'
+    container_name: mailhog
+    ports:
+    - '1025:1025'
+    - '8025:8025'
   db:
     image: mysql
     container_name: irma_keyshare_db
