--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -5,7 +5,7 @@
     "login_attribute": "number",
     "email_attributes": [],
     "alt_login_attributes": [],
-    "apiserver_url": "http://localhost:8088/session/",
+    "apiserver_url": "http://10.0.0.4:18088/session/",
     "apiserver_publickey": "apiserver.der",
     "rate_limit": 0,
     "server_name": "keyshare_server",
@@ -15,7 +15,7 @@
     "mail_user": "",
     "mail_password": "",
     "mail_from": "test@test.com",
-    "mail_host": "127.0.0.1",
+    "mail_host": "mail",
     "mail_port": "1025",
     "mail_starttls_required": "false",
     "url": "http://localhost:8080/irma_keyshare_server/api/v1",
