Adding used keys and config

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,11 +1,11 @@
 {
     "scheme_manager": "inz-demo",
-    "issuer": "inz",
+    "issuer": "internetnz",
     "login_credential": "id",
     "login_attribute": "number",
     "email_attributes": [],
     "alt_login_attributes": [],
-    "apiserver_url": "http://10.0.0.4:18088/session/",
+    "apiserver_url": "http://192.168.0.10:18088/session/",
     "apiserver_publickey": "apiserver.der",
     "rate_limit": 0,
     "server_name": "keyshare_server",
@@ -18,7 +18,7 @@
     "mail_host": "mail",
     "mail_port": "1025",
     "mail_starttls_required": "false",
-    "url": "http://localhost:8080/irma_keyshare_server/api/v1",
+    "url": "http://192.168.0.10:8080/irma_keyshare_server/api/v1",
     "schemeManager_update_uri": null,
     "schemeManager_publickey": "schemeManager.pk.pem",
     "defaultLanguage": "en",
